# python-project-lvl4

./: .env  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/users/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
templates/: creating_form.html  deleting_form.html  messages.html  updating_form.html
templates/labels/: create.html  delete.html  main.html  update.html
templates/statuses/: create.html  delete.html  main.html  update.html
templates/task_manager/: index.html  layout.html
templates/tasks/: create.html  creating_and_updating_form.html  delete.html  detail.html  filter.html  main.html  update.html
templates/users/: create.html  delete.html  login.html  main.html  update.html
